--- a/styles/style.css
+++ b/styles/style.css
@@ -77,11 +77,17 @@ body {
     padding: 2rem;
     text-align: center;
   }
-  
+ 
   .grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1.5rem;
+  }
+
+  .gridC {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    gap: 0.5rem;
   }
   
   .card {
@@ -94,6 +100,12 @@ body {
   .card img {
     width: 100%;
     height: 500px;
+    object-fit:cover;
+  }
+
+  .cardC img {
+    width: 50%;
+    height: 400px;
     object-fit:cover;
   }
   
